# Huawei-Project-Network-Softwarization

code/Backup-Sepher/: abstract.txt  problem_spec.h  reach_table.cpp  reading_utilities.cpp  solution.h  split_option_finder.cpp  tempBuffer.txt
code/Phase2-BSR/: basic_functions.cpp  basic_functions.h  bsr_main.cpp  convertor.cpp  convertor.h  hua-script-large.sh  hua-script.sh  hua_disjoint_paths.cpp  hua_disjoint_paths.h  io.h  problem_spec.cpp  (+7 more)
code/hua-to-modify/Backup/: CMakeLists.txt  Makefile  ONE_v1.csv  basic_functions.cpp  hua-script.sh  main.cpp  reach_table.h  split_option_finder.h  vne_heuristic
code/hua-to-modify/Backup/varl2nvn/case0/vnr/: newoutput3.txt  vn2.txt  vn4.txt.path  vnloc0.txt  vnloc1.txt
code/hua-to-modify/Backup/varl2nvn/case1/vnr/: newoutput2.txt  vn2.txt.path  vn3.txt.path  vnloc1.txt
code/hua-to-modify/Backup/varl2nvn/case3/vnr/: log0.txt  log1.txt  log2.txt  vn0.txt.path  vn2.txt  vn2.txt.path  vnloc1.txt  vnloc4.txt
code/hua-to-modify/Backup/varl2nvn/case4/vnr/: log2.txt  vnloc0.txt  vnloc2.txt  vnloc4.txt
code/hua-to-modify/Backup/varl2nvn/case5/vnr/: log1.txt  log3.txt  log4.txt  vn2.txt.path  vn4.txt  vnloc3.txt  vnloc4.txt
code/hua-to-modify/Backup/varl2nvn/case6/vnr/: log0.txt  log1.txt  newoutput1.txt  vn2.txt.path  vn4.txt.info  vn4.txt.path
code/hua-to-modify/Backup/varl2nvn/case7/vnr/: log2.txt  vn1.txt  vn2.txt.info  vn3.txt.path
code/hua-to-modify/Backup/varl2nvn/case8/vnr/: vn1.txt  vn1.txt.path  vn2.txt.path
code/hua-to-modify/Backup/varl2nvn/case9/vnr/: vn2.txt.path  vn4.txt  vnloc1.txt  vnloc4.txt
(+4462 files in other folders)
